<resources>
    <string name="app_name">HSMB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Vital signs</string>
    <string name="menu_gallery">Location booth</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="Num_body_temperature">00.0</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="Num_heart_rate">00</string>
    <string name="Bpm">Bpm</string>
    <string name="Oxygen_blood">Blood oxygen </string>
    <string name="Num_Oxygen_blood">00 %</string>
    <string name="blood_pressure">blood pressure</string>
    <string name="Num_blood_pressure">000-00</string>
    <string name="mmHg">mmHg</string>
    <string name="location">nearest booths location</string>
    <string name="name_pilgrim">name pilgrim</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_userName">username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="Login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="out">SignOut</string>


</resources>